✨ feat(21_异常): 添加异常处理和配置读取示例代码

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,6 +9,9 @@
                 "-std=c++11",
                 "-g",
                 "${file}",
+                "${fileDirname}/src/*",
+                "-I${fileDirname}/include",
+                "-I${fileDirname}/src",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}"
             ],
