✨ feat(22_函数指针): 添加函数指针相关的示例代码

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,6 +53,8 @@
         "unordered_map": "cpp",
         "stack": "cpp",
         "condition_variable": "cpp",
-        "deque": "cpp"
+        "deque": "cpp",
+        "__tree": "cpp",
+        "map": "cpp"
     }
 }
